@@ -1,3 +1,13 @@
+2005-04-14  James Turner  <james@worldforge.org>
+
+    * Eris/Entity.cpp, Eris/Entity.h, Eris/EntityRouter.cpp: changes to
+      handle sound(action) broadcasts, consume the op and trigger a virtual /
+      signal pair on Entity. The virtual method is called onSoundAction, the
+      signal is called 'Noise' - better names would be appreciated.
+
+	* tests/tests.cpp: add tests for hearing speech and other sound of other
+	  actions.
+
 2005-04-10  James Turner  <james@worldforge.org>
 
 	* configure.ac: bump version to 1.3.4, so clients can test for new
